syntax = "proto3";
package calculator;
option go_package = "calculatorpb";

message SumRequest { repeated sint32 nums = 1; }

message SumResponse { sint32 sum_result = 1; }

message PrimeNumberDecompositionRequest { sint32 num = 1; }
message PrimeNumberDecompositionResponse { sint32 prime_factor = 1; }

message ComputeAverageRequest { int32 num = 1; }

message ComputeAverageResponse { double average = 1; }

message FindMaximumRequest { int32 num = 1; }

message FindMaximumResponse { int32 current_maximum = 1; }

message SquareRootRequest { int32 number = 1; }

message SquareRootResponse { double number_root = 1; }

service CalculatorService {
  // Unary
  rpc Sum(SumRequest) returns (SumResponse) {};
  rpc PrimeNumberDecomposition(PrimeNumberDecompositionRequest)
      returns (stream PrimeNumberDecompositionResponse) {};
  rpc ComputeAverage(stream ComputeAverageRequest)
      returns (ComputeAverageResponse) {};

  rpc FindMaximum(stream FindMaximumRequest)
      returns (stream FindMaximumResponse) {};

  // This RPC will throw an excception if the sent number is negative
  // The error being sent is of type INVALID_ARGUMENT
  rpc SquareRoot(SquareRootRequest) returns (SquareRootResponse) {};
}
